syntax = "proto3";
package freya;

import "google/protobuf/empty.proto";

service Freya {
    rpc SaveNewTemplate(TemplateData) returns (SaveTemplateResponse) {}
    rpc UpdateTemplate(TemplateData) returns (UpdateTemplateResponse) {}
    rpc GetAllTemplates(google.protobuf.Empty) returns (TemplatesList) {}

    rpc SendEmail(SendEmailParams) returns (SendEmailResponse) {}
    rpc SendSMS(SendSMSParams) returns (SendSMSResponse) {}
}

message PhoneNumber {
    string CountryCode = 1;
    string Number = 2;
}

message SendSMSParams {
    PhoneNumber phone = 1;
    string templateName = 3;
    map <string, string> params = 4;
}

message SendSMSResponse {
    bool sent = 1;
    Error error = 2;
}

message TemplatesList {
    map<string, TemplateFields> templates = 1;
    Error error = 2;
}

message TemplateFields {
    map<string, string> fields = 1;
}

message SendEmailParams {
    map<int32, string> to = 1; // With Priority
    string subject = 2;
    string templateName = 3;
    map <string, string> params = 4;
}

message SendEmailResponse {
    bool sent = 1;
    Error error = 2;
}

message TemplateData {
    string templateName = 1;
    bytes data = 2;
}

message SaveTemplateResponse {
    bool saved = 1;
    string templateName = 2;
    Error error = 3;
}

message UpdateTemplateResponse {
    bool updated = 1;
    TemplateData template = 2;
    Error error = 3;
}

message Error {
    int32 errorCode = 1;
    string message = 2;
}